cmake_minimum_required(VERSION 3.10)
project(gh_code)
set(CMAKE_CXX_STANDARD 14)
#set(project_root ${gh_code}_SOURCE_DIR)
include_directories(${PROJECT_SOURCE_DIR}/leetcode)
include_directories(${PROJECT_SOURCE_DIR}/SwordToOffer)
include_directories(${PROJECT_SOURCE_DIR}/ghlib)
aux_source_directory(${PROJECT_SOURCE_DIR}/leetcode src)
aux_source_directory(${PROJECT_SOURCE_DIR}/SwordToOffer src)
aux_source_directory(${PROJECT_SOURCE_DIR}/ghlib src)

add_executable(gh_code main.cpp ${src})