cmake_minimum_required(VERSION 3.10)
project(gh_code)
set(CMAKE_CXX_STANDARD 14)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
link_directories(${PROJECT_SOURCE_DIR}/lib/apue)
link_directories(${PROJECT_SOURCE_DIR}/lib/unp)
link_libraries(apue)
link_libraries(unp)

include_directories(${PROJECT_SOURCE_DIR}/leetcode)
include_directories(${PROJECT_SOURCE_DIR}/SwordToOffer)
include_directories(${PROJECT_SOURCE_DIR}/ghlib)
include_directories(${PROJECT_SOURCE_DIR}/lib/apue)
include_directories(${PROJECT_SOURCE_DIR}/lib/unp)
include_directories(${PROJECT_SOURCE_DIR}/apue)
include_directories(${PROJECT_SOURCE_DIR}/unp)

aux_source_directory(${PROJECT_SOURCE_DIR}/leetcode src)
aux_source_directory(${PROJECT_SOURCE_DIR}/SwordToOffer src)
aux_source_directory(${PROJECT_SOURCE_DIR}/ghlib src)
aux_source_directory(${PROJECT_SOURCE_DIR}/apue src)
aux_source_directory(${PROJECT_SOURCE_DIR}/unp src)
add_executable(gh_code main.cpp ${src})
target_link_libraries(gh_code apue unp -lpthread)
